kubernetes/ingress/contour/weighted/myapp-v1.1.yml
apiVersion: v1
kind: Namespace
metadata:
  name: weighted-routing
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: myapp
    app-version: v1.1
  name: myapp-deployment-v11
  namespace: weighted-routing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
      app-version: v1.1
  strategy: {}
  template:
    metadata:
      labels:
        app: myapp
        app-version: v1.1
    spec:
      containers:
      - image: nginx
        name: myapp
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh","-c","export MYIP=$(hostname -I);echo \"<!DOCTYPE html><html><body><h1>v1.1! - $MYIP</h1></body></html>\" > /usr/share/nginx/html/index.html;"]
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: myapp
    app-version: v1.1    
  name: myapp-svc-11
  namespace: weighted-routing
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: myapp
    app-version: v1.1
  type: ClusterIP
