kubernetes/ingress/contour/weighted/contour-ingress-weighted.yml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata: 
  name: myapp-root
  namespace: weighted-routing
spec: 
  virtualhost:
    fqdn: myapp.tkg.haas-426.pez.pivotal.io
  routes: 
    - conditions:
      - prefix: /  
      services:
        - name: myapp-svc-10
          port: 90
          weight: 50
        - name: myapp-svc-11
          port: 80
          weight: 10
